--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
+        "php-stubs/wordpress-stubs": "^6.4",
         "phpcompatibility/phpcompatibility-wp": "^2.1",
         "rector/rector": "^0.19.1",
         "wp-cli/wp-cli-bundle": "^2.8",
