--- a/.github/workflows/deploy-to-wordpress-org-and-create-release.yml
+++ b/.github/workflows/deploy-to-wordpress-org-and-create-release.yml
@@ -8,6 +8,8 @@ jobs:
     name: New tag
     runs-on: ubuntu-latest
     steps:
+    - name: Install Subversion
+      run: sudo apt-get install subversion
     - name: Checkout code
       uses: actions/checkout@v4
     - name: WordPress Plugin Deploy
