--- a/.github/workflows/deploay-asset-readme-update.yml
+++ b/.github/workflows/deploay-asset-readme-update.yml
@@ -8,6 +8,8 @@ jobs:
     name: Push to trunk
     runs-on: ubuntu-latest
     steps:
+    - name: Install Subversion
+      run: sudo apt-get install subversion
     - uses: actions/checkout@master
     - name: WordPress.org plugin asset/readme update
       uses: 10up/action-wordpress-plugin-asset-update@stable
